--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,24 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+<!-- Styles de Bootstrap -->
+<link rel="stylesheet" href="assets\vendors\Bootstrap\css\bootstrap.min.css">
+<link rel="stylesheet" href="assets\vendors\Bootstrap\css\bootstrap-theme.min.css">
+
 </head>
 <body>
+
+
+
   <app-root></app-root>
+
+
+
+
+  <!-- JQyery -->
+<script src="assets\vendors\jquery-3.3.1.min.js"></script>
+  <!-- Scripts de Bootstrap -->
+<script src="assets\vendors\Bootstrap\js\bootstrap.min.js"></script>
 </body>
 </html>
