--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-
+  <!-- font-awesome4.7.0 -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- Styles de Bootstrap -->
 <link rel="stylesheet" href="assets\vendors\Bootstrap\css\bootstrap.min.css">
 <link rel="stylesheet" href="assets\vendors\Bootstrap\css\bootstrap-theme.min.css">
