--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 <!-- Styles de Bootstrap -->
 <link rel="stylesheet" href="assets\vendors\Bootstrap\css\bootstrap.min.css">
 <link rel="stylesheet" href="assets\vendors\Bootstrap\css\bootstrap-theme.min.css">
+<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
 
 </head>
 <body>
@@ -27,5 +28,7 @@
 <script src="assets\vendors\jquery-3.3.1.min.js"></script>
   <!-- Scripts de Bootstrap -->
 <script src="assets\vendors\Bootstrap\js\bootstrap.min.js"></script>
+
+<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
 </body>
 </html>
